# TrayLauncher

./: .gitignore  CMakeLists.txt  plan.txt  readme.txt  readme_cn.txt
CB/: TrayLauncher.cbp
CB/dll/: CMakeLists.txt  dll.cbp  main.cpp  main.h
TLMenuCfg/: CMakeLists.txt  TLMenuCfg.cbp  TLMenuCfgApp.cpp  TLMenuCfgApp.h  TLMenuCfgMain.cpp  TLMenuCfgMain.h  resource.rc  wx_pch.h
TLMenuCfg/include/: MenuItemData.h
TLMenuCfg/src/: MenuItemData.cpp
TLMenuCfg/wxsmith/: TLMenuCfgdialog.wxs
VisualStudio/: TrayLauncher.sln  TrayLauncher.vcxproj  TrayLauncher.vcxproj.filters  TrayLauncher_vc2008.sln  TrayLauncher_vc2008.vcproj
intro/: intro.xml  zh_cn.txt
latest/: changelog.txt  tlcmd.example
latest/doc/: intro.html
lng/: TL_cn.lng  TL_de.lng  TL_de_2.lng  TL_en.lng  TL_fr.lng  TL_it.lng  TL_ko.lng  TL_nl.lng  TL_pl.lng  TL_pl_2.lng  TL_ro.lng  TL_ru.lng  TL_sv.lng
skin/darkbarneongreen/: info.nfo
skin/green_2/: info.nfo
src/: CMakeLists.txt
src/include/: TypeTraits.h  auto_handle.h  auto_pointers.h  stdheaders.h
src/source/: FileStrFnc.cpp  FileStrFnc.h  GDIWavePic.cpp  GDIWavePic.h  Hotkey.cpp  Hotkey.h  MenuData.cpp  MenuData.h  MenuWithIcon.cpp  MenuWithIcon.h  MsgMap.cpp  MsgMap.h  OwnerDrawMenu.cpp  OwnerDrawMenu.h  Resource.h  RunDlg.cpp  RunDlg.h  SettingFile.cpp  SettingFile.h  TrayStart.cpp  TrayStart.h  TrayStart.rc  WavePic.cpp  WavePic.h  appstrings.h  language.cpp  language.h  stdafx.cpp  stdafx.h  xmlmenudata.cpp  xmlmenudata.h
src/source/pugixml/: pugiconfig.hpp
src/source/rc/: TrayLauncher.exe.Manifest
